# JUSTICE

./: .gitattributes  .gitignore  JUSTICE-MATTER.ipynb  JUSTICE_ABM_perso.py  JUSTICE_ABM_perso_simple_run.py  JUSTICE_ABM_perso_utility_params.py  JUSTICE_MATTER_stepwise_run.py  JUSTICE_example.py  JUSTICE_example_run.ipynb  JUSTICE_example_run.py  JUSTICE_matter_rbf.py  README.md  TODO_script.bat  TODO_script.ps1  analysis_JUSTICE_MATTER.ipynb  analyzer_JUSTICEABM.py  choroplets_maps_comparision.py  chroropleth_ratios.py  chroropleth_variables.py  crab_network_{seed}.graphml  data_processing.ipynb  dmdu_tutorial.ipynb  endogenous_growth.ipynb  environment.yml  eval.py  eval_pettingzoo.py  hpc_run.py  initialization_calib.ipynb  interactive_viz.py  justice_env.yaml  marl_test.py  nu_analysis.ipynb  nu_analysis.py  omega_df  policy_loader.py  postBuild  pyproject.toml  regions_map.py  requirements.txt  run.sh  (+5 more)
analysis/: analyzer.py  hpc_run.py  limitarian_opt_config.json  ncc_opt_config.json  normative_uncertainty_optimization.json  output_data_processor.py  run.sh  run_conda_env.sh  run_exclusive_node.sh  visualizer.py
config/: JUSTICE_config.yaml  default_parameters.py  emissions_control_rate_linear.csv  savings_rate_fixed.csv
data/: 5_regions_green.json  Util_100k_hv.csv  abatement_coefficient_a.pickle  abatement_coefficient_b.pickle  alpha_downscaler_coefficient.pickle  beta_downscaler_coefficient.pickle  capital_init_arr.pickle  emissions_dict.pickle  gdp_dict.pickle  population_dict.pickle  ppp2mer_arr.pkl  regions_list.pkl  rice50_regions_dict.pickle  savings_rate_init_arr.pickle
emodps/: rbf.py
justice/: model.py
optimized_policies/: PRIORITARIAN_reference_set.csv  UTILITARIAN_reference_set.csv
paper/: README.md  baseline_emissions.csv  constants.py  eval_utils.py  paper_eval.ipynb  paper_eval.py  plot_training_metrics.py
rl/: agent.py  args.py  distributions.py  env.py  eval.py  moma_ppo.py  train.py
(+209 files in other folders)
