[project]
name = "justice"
version = "0.1.0"
description = "JUSTICE is an open-source Integrated Assessment Modeling Framework for Analysing Policy Implications of Modelling Assumptions"
authors = [{ name = "PBiswas", email = "p.biswas@tudelft.nl" }]
license = { text = "BSD-3-Clause" }
readme = "README.md"
requires-python = ">=3.9, <4"
dependencies = [
    "fair (==2.1.3)",
    "h5py (==3.13.0)",
    "platypus-opt (==1.1.0)",
    "ema-workbench (==2.5.0)",
    "numpy (>=1.23)",
    "scipy (>=1.10.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
packages = [{ include = "justice" }]

[tool.poetry.dev-dependencies]
pytest = "8.3.5"
